Fixed references to the old start-ray.sh script

--- a/advanced-ray/03-Ray-Internals.ipynb
+++ b/advanced-ray/03-Ray-Internals.ipynb
@@ -392,16 +392,7 @@
     "> 1. Tasks from a single caller are executed in the order _submitted_.\n",
     "> 2. There is no guaranteed ordering of tasks _across different_ callers.\n",
     "\n",
-    "To illustrate, run the next cell and observe the output, where the results returned from `a`, `b`, and `c` will contain a non-overlapping subset of the numbers returned by Counter."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!../tools/start-ray.sh  --check --verbose"
+    "To illustrate, start Ray, then run the following cells and observe the output, where the results returned from `a`, `b`, and `c` will contain a non-overlapping subset of the numbers returned by Counter."
    ]
   },
   {
@@ -412,7 +403,7 @@
    "source": [
     "import ray\n",
     "\n",
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
