--- a/ray-crash-course/07-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/07-Running-Ray-Clusters.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "## ray stat\n",
     "\n",
-    "Your first question might be, is Ray already running on this node as part of a cluster? This is what `start-ray.sh` has to determine. The command `ray stat` can be used to determine this."
+    "Your first question might be, is Ray already running on this node as part of a cluster? The command `ray stat` can be used to determine this."
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`ray stat` returns the exit code `0` if Ray is running locally or a nonzero value if it isn't. `start-ray.sh` exploits this feature to decide when to start ray:\n",
+    "`ray stat` returns the exit code `0` if Ray is running locally or a nonzero value if it isn't. The following command exploits this feature and starts a _head_ node for Ray:\n",
     "\n",
     "```shell\n",
     "ray stat > /dev/null 2>&1 || ray start --head\n",
