--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -97,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "!rllib train --run PPO --env CartPole-v1 --stop='{\"training_iteration\": 20}' --ray-address auto --checkpoint-freq 10 --checkpoint-at-end"
+    "!rllib train --run PPO --env CartPole-v1 --stop='{\"training_iteration\": 20}' --checkpoint-freq 10 --checkpoint-at-end"
    ]
   },
   {
@@ -144,15 +144,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are working on a laptop, you can use `rllib rollout <checkpoint> --run PPO` to run episodes from a `<checkpoint>`, which in this case will be a directory with a name like this:\n",
+    "We can use `rllib rollout <checkpoint> --run PPO` to run episodes from a `<checkpoint>`, which in this case will be a directory with a name like this:\n",
     "\n",
     "```\n",
     "$HOME/ray_results/default/PPO_CartPole-v1_0_YYYY-MM-DD_HH-MM-SS.../checkpoint_20/checkpoint-20/\n",
     "```\n",
     "\n",
-    "The following shell command will find the correct directory for you and run the `rllib rollout <checkpoint> --run PPO` command. (It will print the actual command, with the correct checkpoint directory.) If it finds more than once checkpoint directory, for example from a previous run, it uses the latest one.\n",
+    "If you are on a MacOS or Linux machine, the shell script in the next cell will find the correct directory for you and run the `rllib rollout <checkpoint> --run PPO` command. It will also print the full command with the correct checkpoint directory. If it finds more than once checkpoint directory, for example from a previous run, it uses the latest one.\n",
     "\n",
-    "> **Note:** If you are working in a cloud environment, add the flag `--no-render` to the command. Otherwise, an error will occur because RLlib won't be able to open the window discussed above."
+    "If you are working in a cloud environment, like the Anyscale platform, add the flag `--no-render` to the command. Otherwise, an error will occur because RLlib won't be able to open the window for _CartPole_.\n",
+    "\n",
+    "If you are on Windows, Change the following cell to this command:\n",
+    "\n",
+    "```\n",
+    "rllib rollout %HOMEDRIVE%%HOMEPATH%\\ray_results\\default\\PPO_CartPole-<fix>\\checkpoint_20\\checkpoint-20 --run PPO --episodes 5\n",
+    "```\n",
+    "\n",
+    "Where you'll need to determine the correct string to use for `<fix>` by looking in the `...\\ray_results\\default\\` directory."
    ]
   },
   {
