Replaced ObjectID with ObjectRef

--- a/ray-crash-course/01-Ray-Tasks.ipynb
+++ b/ray-crash-course/01-Ray-Tasks.ipynb
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is this `ObjectID`? A Ray task is an asynchronous computation. The `ObjectID` returned is a _future_ that we use to retrieve the resulting value from the task when it completes. We use `ray.get(id)` to get it:"
+    "What is this `ObjectRef`? A Ray task is an asynchronous computation. The `ObjectRef` returned is a _future_ that we use to retrieve the resulting value from the task when it completes. We use `ray.get(id)` to get it:"
    ]
   },
   {
