--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -192,7 +192,7 @@
     "* Invoke tasks with `foo.remote(...)`\n",
     "* Invoke actor constructors `MyClass.remote(...)`.\n",
     "* Invoke actor methods with `my_instance.remote(...)`.\n",
-    "* Invocations return an `ObjectID` for a _future_. Use `ray.get(id)` to return the value.\n",
+    "* Invocations return an `ObjectRef` for a _future_. Use `ray.get(id)` to return the value.\n",
     "* However, `ray.get()` blocks, so consider using `ray.wait()` when waiting for a collection of futures, so as they become available, you can retrieve them with `ray.get()` (which won't block when we know the results are available), then process the results, all while waiting for the rest to finish.\n",
     "* Pick functions to parallelize that do enough work so that the Ray \"remoting\" overhead is not significant. Very short functions will actually yield lower performance if convert to tasks. \n",
     "* Similarly, avoid too many actors, as each one is pinned to memory until no longer needed."
