--- a/advanced-ray/03-Ray-Internals.ipynb
+++ b/advanced-ray/03-Ray-Internals.ipynb
@@ -40,7 +40,7 @@
     "* c. Remote (distributed) task scheduling. The Ray library running in the **driver** process also coordinates resource scheduling directly with remote **schedulers**. This is a recent optimization to remove the bottleneck of running all such requests via the local **scheduler**.\n",
     "* d. Distributed object transfer. Large objects are stored in a node's **object store**. (All these **object stores** together constitute the **distributed object store**.) Occasionally an object needs to be transferred to the **object store** on another node so it is co-resident with the task that needs it. Reading is zero-copy, because shared memory is used. The **object store** is implemented with [Plasma, part of PyArrow](https://arrow.apache.org/docs/python/plasma.html). Small objects that result from task computation are actually copied directly to the driver or worker that requested them, bypassing the overhead of going through the **object store**.\n",
     "* e. Metadata lookup in the **global control store (GCS)** for objects in the **distributed object store** and actors in **workers**, such as their locations. The **object table** holds the object metadata.\n",
-    "* f. Storage and retrieval of objects created through `ray.put` and large objects returned from a task. Retrieval is via `ray.get` or during task execution, when replacing a task’s `ObjectID` argument with the object’s value.\n",
+    "* f. Storage and retrieval of objects created through `ray.put` and large objects returned from a task. Retrieval is via `ray.get` or during task execution, when replacing a task’s `ObjectRef` argument with the object’s value.\n",
     "* g. **scheduler** messages exchanged with the **object store** to coordinate objects required for tasks."
    ]
   },
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Worker 1 erases its entry for object `X`. This is safe to do because the previously-pending task `C` had the only reference to `X` and `C` has now finished. Worker 1 keeps its entry for `Y` because the application still has a reference to `y`’s `ObjectID`.\n",
+    "1. Worker 1 erases its entry for object `X`. This is safe to do because the previously-pending task `C` had the only reference to `X` and `C` has now finished. Worker 1 keeps its entry for `Y` because the application still has a reference to `y`’s `ObjectRef`.\n",
     "    * Eventually, all copies of `X` are deleted from the cluster. This can be done at any point after step 1. As noted above, node 3’s copy of `X` may also be deleted before step 1, if node 3’s object store is under memory pressure.\n",
     "    \n",
     "Now that we've walked through this example, let's expand on a few details."
