Replaced "ids" with "refs".

--- a/ray-crash-course/01-Ray-Tasks.ipynb
+++ b/ray-crash-course/01-Ray-Tasks.ipynb
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is this `ObjectRef`? A Ray task is an asynchronous computation. The `ObjectRef` returned is a _future_ that we use to retrieve the resulting value from the task when it completes. We use `ray.get(id)` to get it:"
+    "What is this `ObjectRef`? A Ray task is an asynchronous computation. The `ObjectRef` returned is a _future_ that we use to retrieve the resulting value from the task when it completes. We use `ray.get(ref)` to get it:"
    ]
   },
   {
@@ -367,15 +367,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id = ray_estimate_pi.remote(100)\n",
-    "print(ray.get(id))"
+    "ref = ray_estimate_pi.remote(100)\n",
+    "print(ray.get(ref))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also work with lists of ids:"
+    "We can also work with lists of refs:"
    ]
   },
   {
@@ -384,8 +384,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = [ray_estimate_pi.remote(n) for n in [100, 1000, 10000]]\n",
-    "print(ray.get(ids))"
+    "refs = [ray_estimate_pi.remote(n) for n in [100, 1000, 10000]]\n",
+    "print(ray.get(refs))"
    ]
   },
   {
@@ -404,8 +404,8 @@
     "def ray_try_it(n, trials):\n",
     "    print('trials = {:3d}, N = {:s}: '.format(trials, str_large_n(n, padding=12)), end='')   # str_large_n imported above.\n",
     "    start = time.time()\n",
-    "    ids = [ray_estimate_pi.remote(n) for _ in range(trials)]\n",
-    "    pis = ray.get(ids)\n",
+    "    refs = [ray_estimate_pi.remote(n) for _ in range(trials)]\n",
+    "    pis = ray.get(refs)\n",
     "    approx_pi = statistics.mean(pis)\n",
     "    stdev = statistics.stdev(pis)\n",
     "    duration = time.time() - start\n",
@@ -615,8 +615,8 @@
    "source": [
     "def ray_try_it2(ns, trials):\n",
     "    start = time.time()\n",
-    "    ids = [ray_estimate_pi2.remote(n, trial) for trial in trials for n in ns]\n",
-    "    still_running = list(ids)\n",
+    "    refs = [ray_estimate_pi2.remote(n, trial) for trial in trials for n in ns]\n",
+    "    still_running = list(refs)\n",
     "    while len(still_running) > 0:\n",
     "        finished, still_running = ray.wait(still_running)\n",
     "        ns_trials_pis = ray.get(finished)   # won't block\n",
