Replaced "ids" with "refs".

--- a/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
+++ b/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
@@ -140,8 +140,8 @@
     "def ray_try_it(n, trials):\n",
     "    print('trials = {:5d}, N = {:s}: '.format(trials, str_large_n(n, padding=15)), end='')   # str_large_n imported above.\n",
     "    start = time.time()\n",
-    "    ids = [ray_estimate_pi.remote(n) for _ in range(trials)]\n",
-    "    pis_counts = ray.get(ids)\n",
+    "    refs = [ray_estimate_pi.remote(n) for _ in range(trials)]\n",
+    "    pis_counts = ray.get(refs)\n",
     "    pis = list(map(lambda t: t[0], pis_counts))\n",
     "    approx_pi = statistics.mean(pis)\n",
     "    stdev = 0.0 if trials == 1 else statistics.stdev(pis)\n",
@@ -228,8 +228,8 @@
     "    determine an reasonably good ``m`` value, but for our purposes, passing in ``m`` is more convenient.\n",
     "    \"\"\"\n",
     "    sizes = sample_sizes(num_samples, m)\n",
-    "    ids = [ray_estimate_pi.remote(size) for size in sizes]\n",
-    "    values = ray.get(ids)  # Not using ray.wait() is okay; the tasks are all roughly the same size\n",
+    "    refs = [ray_estimate_pi.remote(size) for size in sizes]\n",
+    "    values = ray.get(refs)  # Not using ray.wait() is okay; the tasks are all roughly the same size\n",
     "    inside_count = 0\n",
     "    total_count = 0\n",
     "    for _, icount, tcount in values:    # Toss the pi value returned\n",
@@ -312,8 +312,8 @@
     "def ray_try_it_blocks(n, m, trials):\n",
     "    print('trials = {:5d}, N = {:s}: '.format(trials, str_large_n(n, padding=15)), end='')   # str_large_n imported above.\n",
     "    start = time.time()\n",
-    "    ids = [ray_estimate_pi_blocks.remote(n, m) for _ in range(trials)]\n",
-    "    pis_counts = ray.get(ids)\n",
+    "    refs = [ray_estimate_pi_blocks.remote(n, m) for _ in range(trials)]\n",
+    "    pis_counts = ray.get(refs)\n",
     "    pis = list(map(lambda t: t[0], pis_counts))\n",
     "    approx_pi = statistics.mean(pis)\n",
     "    stdev = 0.0 if trials == 1 else statistics.stdev(pis)\n",
