Replaced "ids" with "refs".

--- a/ray-crash-course/04-Ray-Multiprocessing.ipynb
+++ b/ray-crash-course/04-Ray-Multiprocessing.ipynb
@@ -340,15 +340,15 @@
     "\n",
     "actor = AsyncActor.remote()\n",
     "\n",
-    "ids = []\n",
+    "refs = []\n",
     "values = []\n",
     "for i in range(10):\n",
     "    # regular ray.get\n",
-    "    ids.append(actor.run_concurrent.remote(i))\n",
+    "    refs.append(actor.run_concurrent.remote(i))\n",
     "\n",
     "    # async ray.get\n",
     "    values.append(await actor.run_concurrent.remote(10+i))\n",
-    "print(ray.get(ids))\n",
+    "print(ray.get(refs))\n",
     "print(values)"
    ]
   },
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that using `await` with a method invocation implicitly invokes `ray.get()` on the returned object id.\n",
+    "Note that using `await` with a method invocation implicitly invokes `ray.get()` on the returned object ref.\n",
     "\n",
     "Under the hood, Ray runs all of the methods inside a single python event loop.\n",
     "\n",
@@ -398,7 +398,7 @@
    "source": [
     "#### Async Tasks\n",
     "\n",
-    "For Ray tasks, the object ids returned by them can be converted to `async.Future` instances."
+    "For Ray tasks, the object refs returned by them can be converted to `async.Future` instances."
    ]
   },
   {
@@ -412,8 +412,8 @@
     "    return 1\n",
     "\n",
     "# The normal Ray way:\n",
-    "id, _ = ray.wait([some_task.remote()])\n",
-    "ray.get(id)"
+    "ref, _ = ray.wait([some_task.remote()])\n",
+    "ray.get(ref)"
    ]
   },
   {
