Replaced "ids" with "refs".

--- a/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
+++ b/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
@@ -120,7 +120,7 @@
     "| :--- | :--- | :------ | :---------- |\n",
     "| `num_cpus` | `int` | `num_cpus=4` | The number of CPU cores to reserve for this task or for the lifetime of the actor. |\n",
     "| `num_gpus` | `int` | `num_gpus=1` | The number of GPU cores to reserve for this task or for the lifetime of the actor. |\n",
-    "| `num_return_vals` | `int` | `num_return_vals=2` | (Only for tasks, not actors.) The number of object IDs returned by the remote function invocation. |\n",
+    "| `num_return_vals` | `int` | `num_return_vals=2` | (Only for tasks, not actors.) The number of object refs returned by the remote function invocation. |\n",
     "| `resources` | `map` | `resources={'flibberts': 5}` | The quantity of various custom resources to reserve for this task or for the lifetime of the actor. This is a dictionary mapping strings (resource names) to numbers. |\n",
     "| `max_calls` | `int` | `max_calls=5` | Only for *remote tasks*. This specifies the maximum of times that a given worker can execute the given remote function before it must exit (this can be used to address memory leaks in third-party libraries or to reclaim resources that cannot easily be released, e.g., GPU memory that was acquired by TensorFlow). By default this is infinite. |\n",
     "| `max_restarts` | `int` | `max_restarts=-1` | Only for *actors*. This specifies the maximum number of times that the actor should be restarted when it dies unexpectedly. The minimum valid value is 0 (default), which indicates that the actor doesn't need to be restarted. A value of -1 indicates that an actor should be restarted indefinitely. |\n",
@@ -140,16 +140,16 @@
     "def tuple3(one, two, three):\n",
     "    return (one, two, three)\n",
     "\n",
-    "x_id, y_id, z_id = tuple3.remote(\"a\", 1, 2.2)\n",
-    "x, y, z = ray.get([x_id, y_id, z_id])\n",
+    "x_ref, y_ref, z_ref = tuple3.remote(\"a\", 1, 2.2)\n",
+    "x, y, z = ray.get([x_ref, y_ref, z_ref])\n",
     "print(f'({x}, {y}, {z})')\n",
     "\n",
     "@ray.remote\n",
     "def tuple3(one, two, three):\n",
     "    return (one, two, three)\n",
     "\n",
-    "xyz_id = tuple3.remote(\"a\", 1, 2.2)\n",
-    "x, y, z = ray.get(xyz_id)\n",
+    "xyz_ref = tuple3.remote(\"a\", 1, 2.2)\n",
+    "x, y, z = ray.get(xyz_ref)\n",
     "print(f'({x}, {y}, {z})')"
    ]
   },
@@ -175,8 +175,8 @@
     "        return (one, two, three)\n",
     "    \n",
     "tupleator = Tupleator.remote()\n",
-    "x_id, y_id, z_id = tupleator.tuple3.remote(\"a\", 1, 2.2)\n",
-    "x, y, z = ray.get([x_id, y_id, z_id])\n",
+    "x_ref, y_ref, z_ref = tupleator.tuple3.remote(\"a\", 1, 2.2)\n",
+    "x, y, z = ray.get([x_ref, y_ref, z_ref])\n",
     "print(f'({x}, {y}, {z})')   "
    ]
   },
@@ -204,15 +204,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id = ray.put(\"Hello World!\")\n",
-    "print(f'Object returned: {ray.get(id)}')"
+    "ref = ray.put(\"Hello World!\")\n",
+    "print(f'Object returned: {ray.get(ref)}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is an optional flag you can pass `weakref=True` (defaults to `False`). If true, Ray is allowed to evict the object while a reference to the returned ID still exists. This is useful if you are putting a lot of objects into the object store and many of them might not be needed in the future. It allows Ray to more aggressively reclaim memory."
+    "There is an optional flag you can pass `weakref=True` (defaults to `False`). If true, Ray is allowed to evict the object while a reference to the returned ref still exists. This is useful if you are putting a lot of objects into the object store and many of them might not be needed in the future. It allows Ray to more aggressively reclaim memory."
    ]
   },
   {
