Replaced "ids" with "refs".

--- a/advanced-ray/01-Ray-Tasks-Revisited.ipynb
+++ b/advanced-ray/01-Ray-Tasks-Revisited.ipynb
@@ -118,10 +118,10 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "id1 = make_array.remote(20)\n",
-    "id2 = make_array.remote(20)\n",
-    "id3 = add_arrays.remote(id1, id2)\n",
-    "print(ray.get(id3))\n",
+    "ref1 = make_array.remote(20)\n",
+    "ref2 = make_array.remote(20)\n",
+    "ref3 = add_arrays.remote(ref1, ref2)\n",
+    "print(ray.get(ref3))\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
    ]
   },
@@ -164,9 +164,9 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
-    "added_array_ids = [add_arrays.remote(id, id) for id in array_ids]\n",
-    "for array in ray.get(added_array_ids):\n",
+    "array_refs = [make_array.remote(n*10) for n in range(5)]\n",
+    "added_array_refs = [add_arrays.remote(ref, ref) for ref in array_refs]\n",
+    "for array in ray.get(added_array_refs):\n",
     "    print(f'{array.size}: {array}')\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
    ]
@@ -209,23 +209,23 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
-    "added_array_ids = [add_arrays.remote(id, id) for id in array_ids]\n",
+    "array_refs = [make_array.remote(n*10) for n in range(5)]\n",
+    "added_array_refs = [add_arrays.remote(ref, ref) for ref in array_refs]\n",
     "\n",
     "arrays = []\n",
-    "waiting_ids = list(added_array_ids)        # Assign a working list to the full list of ids\n",
-    "while len(waiting_ids) > 0:                # Loop until all tasks have completed\n",
+    "waiting_refs = list(added_array_refs)  # Assign a working list to the full list of refs\n",
+    "while len(waiting_refs) > 0:           # Loop until all tasks have completed\n",
     "    # Call ray.wait with:\n",
-    "    #   1. the list of ids we're still waiting to complete,\n",
+    "    #   1. the list of refs we're still waiting to complete,\n",
     "    #   2. tell it to return immediately as soon as one of them completes,\n",
     "    #   3. tell it wait up to 10 seconds before timing out.\n",
-    "    ready_ids, remaining_ids = ray.wait(waiting_ids, num_returns=1, timeout=10.0)\n",
-    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_ids), time.time() - start))\n",
-    "    new_arrays = ray.get(ready_ids)\n",
+    "    ready_refs, remaining_refs = ray.wait(waiting_refs, num_returns=1, timeout=10.0)\n",
+    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_refs), time.time() - start))\n",
+    "    new_arrays = ray.get(ready_refs)\n",
     "    arrays.extend(new_arrays)\n",
     "    for array in new_arrays:\n",
     "        print(f'{array.size}: {array}')\n",
-    "    waiting_ids = remaining_ids  # Reset this list; don't include the completed ids in the list again!\n",
+    "    waiting_refs = remaining_refs  # Reset this list; don't include the completed refs in the list again!\n",
     "    \n",
     "print(f\"\\nall arrays: {arrays}\")\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
@@ -237,7 +237,7 @@
    "source": [
     "Now it still takes about 8 seconds to complete, 4 seconds for the longest invocation of `make_array` and 4 seconds for the invocation of `add_arrays`, but since the others complete more quickly, we see their results as soon as they become available, at 0, 2, 4, and 6 second intervals.\n",
     "\n",
-    "> **Warning:** For each call to `ray.wait()` in a loop like this, it's important to remove the ids that have completed. Otherwise, `ray.wait()` will return immediately with the same list containg the first completed item, over and over again; you'll loop forever!! Resetting the list is easy, since the second list returned by `ray.wait()` is the rest of the items that are still running. So, that's what we use.\n",
+    "> **Warning:** For each call to `ray.wait()` in a loop like this, it's important to remove the refs that have completed. Otherwise, `ray.wait()` will return immediately with the same list containg the first completed item, over and over again; you'll loop forever!! Resetting the list is easy, since the second list returned by `ray.wait()` is the rest of the items that are still running. So, that's what we use.\n",
     "\n",
     "Now let's try it with `num_returns = 2`:"
    ]
@@ -249,24 +249,24 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
-    "added_array_ids = [add_arrays.remote(id, id) for id in array_ids]\n",
+    "array_refs = [make_array.remote(n*10) for n in range(5)]\n",
+    "added_array_refs = [add_arrays.remote(ref, ref) for ref in array_refs]\n",
     "\n",
     "arrays = []\n",
-    "waiting_ids = list(added_array_ids)        # Assign a working list to the full list of ids\n",
-    "while len(waiting_ids) > 0:                # Loop until all tasks have completed\n",
+    "waiting_refs = list(added_array_refs)  # Assign a working list to the full list of refs\n",
+    "while len(waiting_refs) > 0:           # Loop until all tasks have completed\n",
     "    # Call ray.wait with:\n",
-    "    #   1. the list of ids we're still waiting to complete,\n",
+    "    #   1. the list of refs we're still waiting to complete,\n",
     "    #   2. tell it to return immediately as soon as TWO of them complete,\n",
     "    #   3. tell it wait up to 10 seconds before timing out.\n",
-    "    return_n = 2 if len(waiting_ids) > 1 else 1\n",
-    "    ready_ids, remaining_ids = ray.wait(waiting_ids, num_returns=return_n, timeout=10.0)\n",
-    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_ids), time.time() - start))\n",
-    "    new_arrays = ray.get(ready_ids)\n",
+    "    return_n = 2 if len(waiting_refs) > 1 else 1\n",
+    "    ready_refs, remaining_refs = ray.wait(waiting_refs, num_returns=return_n, timeout=10.0)\n",
+    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_refs), time.time() - start))\n",
+    "    new_arrays = ray.get(ready_refs)\n",
     "    arrays.extend(new_arrays)\n",
     "    for array in new_arrays:\n",
     "        print(f'{array.size}: {array}')\n",
-    "    waiting_ids = remaining_ids  # Reset this list; don't include the completed ids in the list again!\n",
+    "    waiting_refs = remaining_refs  # Reset this list; don't include the completed refs in the list again!\n",
     "    \n",
     "print(f\"\\nall arrays: {arrays}\")\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
@@ -304,24 +304,24 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
-    "added_array_ids = [add_arrays.remote(id, id) for id in array_ids]\n",
+    "array_refs = [make_array.remote(n*10) for n in range(5)]\n",
+    "added_array_refs = [add_arrays.remote(ref, ref) for ref in array_refs]\n",
     "\n",
     "arrays = []\n",
-    "waiting_ids = list(added_array_ids)        # Assign a working list to the full list of ids\n",
-    "while len(waiting_ids) > 0:                # Loop until all tasks have completed\n",
+    "waiting_refs = list(added_array_refs)  # Assign a working list to the full list of refs\n",
+    "while len(waiting_refs) > 0:           # Loop until all tasks have completed\n",
     "    # Call ray.wait with:\n",
-    "    #   1. the list of ids we're still waiting to complete,\n",
+    "    #   1. the list of refs we're still waiting to complete,\n",
     "    #   2. tell it to return immediately as soon as TWO of them complete,\n",
     "    #   3. tell it wait up to 10 seconds before timing out.\n",
-    "    return_n = 2 if len(waiting_ids) > 1 else 1\n",
-    "    ready_ids, remaining_ids = ray.wait(waiting_ids, num_returns=return_n, timeout=10.0)\n",
-    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_ids), time.time() - start))\n",
-    "    new_arrays = ray.get(ready_ids)\n",
+    "    return_n = 2 if len(waiting_refs) > 1 else 1\n",
+    "    ready_refs, remaining_refs = ray.wait(waiting_refs, num_returns=return_n, timeout=10.0)\n",
+    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_refs), time.time() - start))\n",
+    "    new_arrays = ray.get(ready_refs)\n",
     "    arrays.extend(new_arrays)\n",
     "    for array in new_arrays:\n",
     "        print(f'{array.size}: {array}')\n",
-    "    waiting_ids = remaining_ids  # Reset this list; don't include the completed ids in the list again!\n",
+    "    waiting_refs = remaining_refs  # Reset this list; don't include the completed refs in the list again!\n",
     "    \n",
     "print(f\"\\nall arrays: {arrays}\")\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
@@ -336,7 +336,7 @@
     "> **Tips:**\n",
     ">\n",
     "> 1. Use `ray.wait()` with a timeout to wait for one or more running tasks. Then use `ray.get()` to retrieve the values for the finished tasks.\n",
-    "> 2. When looping over calls to `ray.wait()` with a list of object ids for running tasks, remove the previously-completed and retrieved objects from the list.\n",
+    "> 2. When looping over calls to `ray.wait()` with a list of object refs for running tasks, remove the previously-completed and retrieved objects from the list.\n",
     "> 3. Don't ask for results you don't need.\n",
     "> 4. Don't ask for the results you need until you really need them."
    ]
@@ -513,8 +513,8 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "ids = [remote_make_array.remote(100000) for _ in range(trials)]\n",
-    "ray.get(ids)\n",
+    "refs = [remote_make_array.remote(100000) for _ in range(trials)]\n",
+    "ray.get(refs)\n",
     "print(f'{time.time() - start} seconds')"
    ]
   },
@@ -545,8 +545,8 @@
     "    local_durations.append(time.time() - start_local)\n",
     "    \n",
     "    start_remote = time.time()\n",
-    "    ids = [remote_make_array.remote(n) for _ in range(trials)]\n",
-    "    ray.get(ids)\n",
+    "    refs = [remote_make_array.remote(n) for _ in range(trials)]\n",
+    "    ray.get(refs)\n",
     "    remote_durations.append(time.time() - start_remote)\n",
     "(ns, local_durations, remote_durations)"
    ]
@@ -642,9 +642,9 @@
    "source": [
     "ray.timeline(timeline_file)\n",
     "start = time.time()\n",
-    "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
-    "added_array_ids = [add_arrays.remote(id, id) for id in array_ids]\n",
-    "for array in ray.get(added_array_ids):\n",
+    "array_refs = [make_array.remote(n*10) for n in range(5)]\n",
+    "added_array_refs = [add_arrays.remote(ref, ref) for ref in array_refs]\n",
+    "for array in ray.get(added_array_refs):\n",
     "    print(f'{array.size}: {array}')\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
    ]
