--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -232,9 +232,9 @@
     "@ray.remote\n",
     "class RayGame:\n",
     "    # TODO: Game memory grows unbounded; trim older states?\n",
-    "    def __init__(self, grid_size, rules_id):\n",
+    "    def __init__(self, grid_size, rules_ref):\n",
     "        self.states = [RayGame.State(size = grid_size)]\n",
-    "        self.rules_id = rules_id\n",
+    "        self.rules_ref = rules_ref\n",
     "\n",
     "    def get_states(self):\n",
     "        return self.states\n",
@@ -243,8 +243,8 @@
     "        \"\"\"Take 1 or more steps, returning a list of new states.\"\"\"\n",
     "        start_index = len(self.states)\n",
     "        for _ in range(num_steps):\n",
-    "            new_state_id = self.rules_id.step.remote(self.states[-1])\n",
-    "            self.states.append(ray.get(new_state_id))\n",
+    "            new_state_ref = self.rules_ref.step.remote(self.states[-1])\n",
+    "            self.states.append(ray.get(new_state_ref))\n",
     "        return self.states[start_index:-1]  # return the new states only!\n",
     "\n",
     "    @ray.remote\n",
@@ -342,21 +342,21 @@
    "outputs": [],
    "source": [
     "def time_ray_games(num_games = 1, max_steps = 100, batch_size = 1, grid_size = 100):\n",
-    "    rules_ids = []\n",
-    "    game_ids = []\n",
+    "    rules_refs = []\n",
+    "    game_refs = []\n",
     "    for i in range(num_games):\n",
-    "        rules_id = RayGame.RayConwaysRules.remote()\n",
-    "        game_id  = RayGame.remote(grid_size, rules_id)\n",
-    "        game_ids.append(game_id)\n",
-    "        rules_ids.append(rules_id)\n",
-    "    print(f'rules_ids:\\n{rules_ids}')  # these will produce more interesting flame graphs!\n",
-    "    print(f'game_ids:\\n{game_ids}')\n",
+    "        rules_ref = RayGame.RayConwaysRules.remote()\n",
+    "        game_ref  = RayGame.remote(grid_size, rules_ref)\n",
+    "        game_refs.append(game_ref)\n",
+    "        rules_refs.append(rules_ref)\n",
+    "    print(f'rules_refs:\\n{rules_refs}')  # these will produce more interesting flame graphs!\n",
+    "    print(f'game_refs:\\n{game_refs}')\n",
     "    start = time.time()\n",
-    "    state_ids = []\n",
-    "    for game_id in game_ids:\n",
+    "    state_refs = []\n",
+    "    for game_ref in game_refs:\n",
     "        for i in range(int(max_steps/batch_size)):  # Do a total of max_steps game steps, which is max_steps/delta_steps\n",
-    "            state_ids.append(game_id.step.remote(batch_size))\n",
-    "    ray.get(state_ids)  # wait for everything to finish! We are ignoring what ray.get() returns, but what will it be??\n",
+    "            state_refs.append(game_ref.step.remote(batch_size))\n",
+    "    ray.get(state_refs)  # wait for everything to finish! We are ignoring what ray.get() returns, but what will it be??\n",
     "    pd(time.time() - start, prefix = f'Total time for {num_games} games (max_steps = {max_steps}, batch_size = {batch_size})')"
    ]
   },
