--- a/advanced-ray/03-Ray-Internals.ipynb
+++ b/advanced-ray/03-Ray-Internals.ipynb
@@ -172,8 +172,8 @@
     "\n",
     "@ray.remote\n",
     "def A(n):    # Assume a large value for n\n",
-    "    stats_id = C.remote(B.remote(n))\n",
-    "    return ray.get(stats_id)\n",
+    "    stats_ref = C.remote(B.remote(n))\n",
+    "    return ray.get(stats_ref)\n",
     "```"
    ]
   },
@@ -330,13 +330,13 @@
     "\n",
     "#### Inlined Objects\n",
     "\n",
-    "For example, `f2.remote(small_object_id)`.\n",
+    "For example, `f2.remote(small_object_ref)`.\n",
     "\n",
     "Inlined objects are resolved locally on the client. The client can do this easily for objects it \"owns,” since it is guaranteed to get a RPC response when the object creation succeeds or fails. Objects it doesn't own are not inlinable. A client will not ask the raylet for a scheduling decision until all inlinable objects become available.\n",
     "\n",
     "#### Non-inlined Objects\n",
     "\n",
-    "For example, `f3.remote(large_or_pending_object_id)`.\n",
+    "For example, `f3.remote(large_or_pending_object_ref)`.\n",
     "\n",
     "When a task depends on a non-inlined object, the client will ask the raylet to make a scheduling decision accounting for these object dependencies. The raylet will wait for those objects to become local to the node before granting a worker lease for the task. This avoids workers being blocked waiting for objects for long periods of time. In the future, the raylet may also make locality-based scheduling decisions (i.e., redirect the client to schedule the task on a node that already has an object). Object locality is not currently implemented."
    ]
@@ -440,13 +440,13 @@
    "outputs": [],
    "source": [
     "counter = Counter.remote()\n",
-    "ids_a = a.remote(counter,100)\n",
-    "ids_b = b.remote(counter,100)\n",
-    "ids_c = c.remote(counter,100)\n",
+    "refs_a = a.remote(counter,100)\n",
+    "refs_b = b.remote(counter,100)\n",
+    "refs_c = c.remote(counter,100)\n",
     "\n",
-    "a_values = ray.get(ray.get(ids_a))\n",
-    "b_values = ray.get(ray.get(ids_b))\n",
-    "c_values = ray.get(ray.get(ids_c))\n",
+    "a_values = ray.get(ray.get(refs_a))\n",
+    "b_values = ray.get(ray.get(refs_b))\n",
+    "c_values = ray.get(ray.get(refs_c))\n",
     "\n",
     "print(f'a: {a_values}')\n",
     "print(f'b: {b_values}')\n",
