--- a/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
+++ b/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
@@ -64,8 +64,8 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "ids = [slow_square.remote(n) for n in range(4)]\n",
-    "squares = ray.get(ids)\n",
+    "refs = [slow_square.remote(n) for n in range(4)]\n",
+    "squares = ray.get(refs)\n",
     "duration = time.time() - start"
    ]
   },
@@ -113,24 +113,24 @@
    "outputs": [],
    "source": [
     "start = time.time()\n",
-    "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
-    "added_array_ids = [add_arrays.remote(id, id) for id in array_ids]\n",
+    "array_refs = [make_array.remote(n*10) for n in range(5)]\n",
+    "added_array_refs = [add_arrays.remote(ref, ref) for ref in array_refs]\n",
     "\n",
     "arrays = []\n",
-    "waiting_ids = list(added_array_ids)        # Assign a working list to the full list of ids\n",
-    "while len(waiting_ids) > 0:                # Loop until all tasks have completed\n",
+    "waiting_refs = list(added_array_refs)  # Assign a working list to the full list of refs\n",
+    "while len(waiting_refs) > 0:            # Loop until all tasks have completed\n",
     "    # Call ray.wait with:\n",
-    "    #   1. the list of ids we're still waiting to complete,\n",
+    "    #   1. the list of refs we're still waiting to complete,\n",
     "    #   2. tell it to return immediately as soon as TWO of them complete,\n",
     "    #   3. tell it wait up to 10 seconds before timing out.\n",
-    "    return_n = 2 if len(waiting_ids) > 1 else 1\n",
-    "    ready_ids, remaining_ids = ray.wait(waiting_ids, num_returns=return_n, timeout=2.5)\n",
-    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_ids), time.time() - start))\n",
-    "    new_arrays = ray.get(ready_ids)\n",
+    "    return_n = 2 if len(waiting_refs) > 1 else 1\n",
+    "    ready_refs, remaining_refs = ray.wait(waiting_refs, num_returns=return_n, timeout=2.5)\n",
+    "    print('Returned {:3d} completed tasks. (elapsed time: {:6.3f})'.format(len(ready_refs), time.time() - start))\n",
+    "    new_arrays = ray.get(ready_refs)\n",
     "    arrays.extend(new_arrays)\n",
     "    for array in new_arrays:\n",
     "        print(f'{array.size}: {array}')\n",
-    "    waiting_ids = remaining_ids  # Reset this list; don't include the completed ids in the list again!\n",
+    "    waiting_refs = remaining_refs  # Reset this list; don't include the completed refs in the list again!\n",
     "    \n",
     "print(f\"\\nall arrays: {arrays}\")\n",
     "pd(time.time() - start, prefix=\"Total time:\")"
@@ -167,12 +167,12 @@
     "    return n*n\n",
     "\n",
     "start = time.time()\n",
-    "ids = [slow_square.remote(n) for n in range(4)]\n",
+    "refs = [slow_square.remote(n) for n in range(4)]\n",
     "squares = []\n",
-    "waiting_ids = ids\n",
-    "while len(waiting_ids) > 0:\n",
-    "    finished_ids, waiting_ids = ray.wait(waiting_ids)  # We just assign the second list to waiting_ids...\n",
-    "    squares.extend(ray.get(finished_ids))\n",
+    "waiting_refs = refs\n",
+    "while len(waiting_refs) > 0:\n",
+    "    finished_refs, waiting_refs = ray.wait(waiting_refs)  # We just assign the second list to waiting_refs...\n",
+    "    squares.extend(ray.get(finished_refs))\n",
     "duration = time.time() - start"
    ]
   },
