Updates for API changes

--- a/ray-crash-course/07-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/07-Running-Ray-Clusters.ipynb
@@ -10,10 +10,13 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "In the previous lessons, we let `ray.init()` start a mini-cluster on your laptop or connect to the running Ray cluster in the Anyscale hosted platform. This lesson shows you how to use the Ray CLI command `ray` to create and manage Ray clusters. \n",
-    "\n",
-    "Let's briefly explore a few of the Ray CLI subcommands. For the full documentation, see the ray documentation for the [Ray CLI](https://docs.ray.io/en/latest/package-ref.html#the-ray-command-line-api). See also the [Cluster Setup](https://docs.ray.io/en/latest/cluster-index.html) section.\n",
-    "\n",
+    "In the previous lessons, we let `ray.init()` start a mini-cluster on your laptop or connect to the running Ray cluster in the Anyscale hosted platform. This lesson discusses using the Ray CLI command `ray` to create and manage Ray clusters. We won't cover all the subcommands `ray` supports. Try `ray --help` and see the [Ray CLI documentation](https://docs.ray.io/en/latest/package-ref.html#the-ray-command-line-api) for more details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> **Tip:** If any of the CLI commands used here print a lot of output, right click on the output and select _Enable Scrolling for Outputs_.\n",
     "\n",
     "> **Notes:** \n",
@@ -58,6 +61,15 @@
    "outputs": [],
    "source": [
     "!ray start --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ray --version\n",
+    "\n",
+    "Show the version of Ray you are using."
    ]
   },
   {
@@ -250,6 +262,15 @@
     "```\n",
     "\n",
     "All references are local because this is the output for a single machine. There are tasks and actors running in the workers, all of which are associated with _driver_ processes that originate with `ipython` processes used by the notebooks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ray status\n",
+    "\n",
+    "A new feature of the Ray CLI is the `status` command for printing various status information about the cluster.\n"
    ]
   }
  ],
