--- a/ray-serve/01-Model-Serving-Challenges.ipynb
+++ b/ray-serve/01-Model-Serving-Challenges.ipynb
@@ -456,11 +456,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Recently, a new `shadow_traffic` method was added, `serve.shadow_traffic(endpoint, backend, fraction)`. It allows you to duplicate a fraction of the traffic to another backend. This is useful for sampling and for testing a new algorithm without affecting current handling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Serve is a Singleton in the Ray Cluster\n",
     "\n",
     "You may have noticed that when defining endpoints and backends, we called Serve API methods, not methods on a Serve _class instance_. Serve defaults to being a [singleton](https://en.wikipedia.org/wiki/Singleton_pattern) in the whole Ray cluster, not just the driver program. We passed a name argument to `serve.init()`, which creates a separate Ray actor internally, but the endpoints and backends defined are still global.\n",
     "\n",
-    "This means that even when you terminate this notebook, our definitions above will persist! Hence, you need to clean up any endpoints and backends that are no longer needed, as follows:"
+    "This means that even when you terminate this notebook, our definitions above will persist! Hence, you need to clean up any endpoints and backends that are no longer needed or shutdown Serve completely."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you don't want to shut down serve, but remove everything currently defined, the following statements can be used:"
    ]
   },
   {
@@ -500,7 +514,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next release of Ray, 0.8.7, will add a `serve.shutdown()` method that makes it easier to clean up."
+    "The previous steps aren't necessary if you want to shutdown Serve completely. Just run the following: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serve.shutdown()"
    ]
   },
   {
